fixed some positioning and removed wrap from orbit

--- a/style.css
+++ b/style.css
@@ -31,8 +31,6 @@ header {
 
   display: flex;
   justify-content: center;
-
-  padding: 5px;
 }
 
 nav {
@@ -84,6 +82,8 @@ main {
   align-items: center;
   border-radius: 8px;
 
+  padding: 20px;
+
   color: whitesmoke;
   background-color: #9dac9d;
   margin-top: 20px;
@@ -97,7 +97,7 @@ main {
 }
 
 .container-text p {
-  text-align: center;
+  text-align: start;
 }
 
 .container-text h2 {
@@ -125,13 +125,13 @@ main {
 
 .orbit {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
 }
 
 .orbit p {
+  padding: 20px;
   max-width: 80ch;
 }
 
